# pio_with_zephyr_native_sim

./: README.md  platformio.ini
lib/print_file_2/: print_file_2.c  print_file_2.h
lib/sum/: sum.c  sum.h
scripts/: build_native_sim.py  build_native_sim_app.py  build_native_sim_test.py  build_zephyr_native_sim.py  upload_native_sim_test.py  upload_zephyr_native_sim.py
src/: main.c  print_file_1.c  print_file_1.h
test/: test_main.c  test_runner.c
test/include_shims/sys/: printk.h
test/test_math/: test_math.c
test/test_string/: test_string.c
test/test_sum/: test_sum.c
zephyr/: CMakeLists.txt
